--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tailor-floors-next",
+  "name": "taylors-floors-next",
   "version": "0.1.0",
   "private": true,
-  "description": "Tailor Floors Inc - Premium Flooring Solutions website converted to Next.js",
+  "description": "Taylor's Floors Inc - Premium Flooring Solutions website converted to Next.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,6 +15,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
